# docs/swagger.yaml
@@ -32,6 +32,17 @@ definitions:
       name:
         type: string
     type: object
+  dto.RoleResponse:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      permissions:
+        items:
+          type: string
+        type: array
+    type: object
   dto.UserResponse:
     properties:
       email:
@@ -187,9 +198,42 @@ paths:
       summary: Create invite link
       tags:
       - invite
-  /permissions/all:
+  /role:
+    post:
+      consumes:
+      - application/json
+      description: Create a new role for users
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Successfully created role
+          schema:
+            $ref: '#/definitions/dto.RoleResponse'
+        "400":
+          description: Not valid data
+          schema:
+            $ref: '#/definitions/response.ProblemDetail'
+        "401":
+          description: Unauthorized - invalid or missing token
+          schema:
+            $ref: '#/definitions/response.ProblemDetail'
+        "403":
+          description: Don't have permissions
+          schema:
+            $ref: '#/definitions/response.ProblemDetail'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.ProblemDetail'
+      security:
+      - BearerAuth: []
+      summary: Create new role
+      tags:
+      - roles
+  /role/permissions:
     get:
-      description: Get all system permissions for roles.
+      description: Get all system permissions for role.
       produces:
       - application/json
       responses:
@@ -205,7 +249,7 @@ paths:
             $ref: '#/definitions/response.ProblemDetail'
       summary: Systems permissions
       tags:
-      - permissions
+      - roles
 schemes:
 - https
 securityDefinitions:
